# tia-operator

./: LICENSE  PRD.md  README.md  index.html  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml  release.yml
docs/plans/: 2026-05-22-tia-operator-prd.md
scripts/: prepare-release-config.mjs
src/: App.css  App.tsx  i18n.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/automation/: mod.rs  recorder.rs  replayer.rs  traits.rs
src-tauri/src/automation/backends/: enigo_replayer.rs  mod.rs  noop_recorder.rs  noop_replayer.rs  rdev_recorder.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/errors/: mod.rs
src-tauri/src/models/: mod.rs
src-tauri/src/shortcuts/: manager.rs
src-tauri/src/state/: mod.rs
src-tauri/src/storage/: db.rs
src/api/: operatorApi.ts  tauriClient.ts
