[package]
name = "tia-operator"
version = "0.1.0"
description = "A local-first desktop input recorder and replayer"
authors = ["Buildmind AI"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tia_operator_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
enigo = "0.6.1"
parking_lot = "0.12"
rdev = "0.5.3"
rusqlite = { version = "0.39", features = ["bundled"] }
thiserror = "2"
uuid = { version = "1", features = ["serde", "v4"] }
